# BRiCk

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  _CoqPath  _CoqProject  _CoqProject.template  coq-cpp2v-bin.install  coq-cpp2v.opam  default.nix  demo2.v  dune  dune-project  file  nix.md  phantom  place_new.cpp  python_requirements.txt  redef_new.cpp  redef_new.hpp  test_float.cpp
.github/: CODEOWNERS
cmake/modules/: FindLLVM.cmake
coq-lens/: coq-lens.opam  dune-project
coq-lens/Lens/: Lens.v
coq-lens/lens-tc/: TC.v
coq-lens/theories/: dune
coq-upoly/upoly/: parsec.v
coqdocjs/extra/: fake-footer.html  fake-header.html
cpp2v-tests/: Makefile  dune  mangle_anonymous.cpp  mangle_template_params.cpp  member_printing.cpp  test_addrof.cpp  test_ctors.cpp  test_defaults.cpp  test_dtor.cpp  test_dtors.cpp  test_implicit_inits_region.cpp  test_init_casts.cpp  test_it.cpp  test_template_2.cpp  test_virtual_functions.cpp
doc/: refinement.v
doc/sphinx/: conf.py  cpp_pointers.rst  evaluation.rst  index.rst  pointer_examples.rst
docs/: .buildinfo  acknowledgements.html  bibliography.html  documentation.html  evaluation.html  features.html  genindex.html  index.html  machine.html  object_layout.html  objects.inv  pointers.html  search.html  searchindex.js  undefined_behavior.html
docs/_sources/: evaluation.rst.txt  machine.rst.txt
docs/proofs/: val_cat.html
dune-ci/: dune_lock_ci.py  find_dune_cache_size.sh  rsync_dune
elpi-extra/: dune
elpi-extra/extra/: dune  prelude.v
elpi-extra/tests/: test_with_locality_declare_instance.v
flags/: coqc  coqdoc
include/: ClangPrinter.hpp  CoqPrinter.hpp  Filter.hpp  Formatter.hpp  Location.hpp  ModuleBuilder.hpp  ToCoq.hpp  ToGd.hpp
ltac2-extra/: dune-project  ltac2-extra.opam
ltac2-extra/plugin/: misc.ml  tac2constr.ml  tacUtil.ml
ltac2-extra/tests/: test_constr.v
ltac2-extra/theories/: extra.v
ltac2-extra/theories/internal/: constr.v  control.v  std.v
ltac2-logger/: dune
ltac2-logger/plugin/: flags.ml  g_ext_flags.mlg  ltac2_format.ml  ltac2_format.mli  main.ml
ltac2-logger/theories/: logger.v
ocaml-rocq-extra/src/: extra_pattern.ml  extra_pp.ml
rocq-bluerock-brick/: README.md  dune-project  rocq-bluerock-brick.opam
rocq-bluerock-brick/doc/: .gitignore
rocq-bluerock-cpp2v/: CMakeLists.txt  dune
rocq-bluerock-cpp2v/include/: CoqPrinter.hpp  PrePrint.hpp  ToCoq.hpp
rocq-bluerock-cpp2v/src/: PrePrint.cpp  PrintDecl.cpp  PrintExpr.cpp  PrintName.cpp  PrintType.cpp  ToCoq.cpp
rocq-bluerock-iris/: dune-project  rocq-bluerock-iris.opam
rocq-bluerock-prelude/: dune-project  rocq-bluerock-prelude.opam
rocq-bluerock-prelude/theories/: array_map.v  base.v  fin.v  fin_map_dom.v  fin_maps.v  fin_sets.v  finite.v  functions.v  gmap.v  lens.v  list.v  list_numbers.v  sts.v  zip_with_index.v  zip_with_indexN.v
rocq-bluerock-rocq-internals/plugin/: rocq_internals.ml
rocq-lens/: README.md  dune-project  rocq-lens.opam
rocq-tc-db-info/: dune
rocq-tools/: dune-project
rocq-tools/lib/: code_quality.ml  code_quality.mli  dune  spandata.mli
rocq-upoly/upoly/: parsec.v
scripts/coq_project_gen/: README.md  gather-coq-paths.py  gen-_CoqProject-dune.sh
setup-tool/: README.md
setup-tool/src/: gen.ml  project.ml  project.mli
src/: BedRockMangle.cpp  ClangPrinter.cpp  CommentScanner.cpp  Elaborate.cpp  Formatter.cpp  FromClang.cpp  Location.cpp  ModuleBuilder.cpp  NotationWriter.cpp  PrePrint.cpp  PrintDecl.cpp  PrintExpr.cpp  PrintLocalDecl.cpp  PrintName.cpp  PrintStmt.cpp  PrintType.cpp  SpecWriter.cpp  StringPrettyPrinter.cpp  ToCoq.cpp  cpp2v.cpp
tests/: Makefile.coq.local  _CoqProject  conv_int.v  dune.inc  expr_notation_tests.v  fundamental_types.cpp  test_static_function_vars.cpp  wp_notation_tests.v
tests/code_notation.t/: run.t  test.v
tests/compute_gmap.t/: test.v
tests/const/: cast.cpp  const_test.v
tests/cpp2v_tests.t/: test_translation_unit_validity_test.v
tests/expr_notation.t/: run.t  test.v
tests/lens.t/: demo.v  run.t  test.v
tests/logic.t/: run.t
tests/type_notation.t/: run.t  test.v
tests/valcat.t/: valcat_of.v
tests/wp_notation.t/: run.t  test.v
theories/: avl.v
theories/lang/: dune
theories/prelude/: array.v  avl.v  base.v  bits.v  bool.v  bs_map.v  bs_test.v  bytestring.v  bytestring_core.v  compare.v  dune  fin_maps.v  fin_sets.v  finite.v  gmap.v  lens.v  list_numbers.v  numbers.v  old_bs_map.v  option.v  parsec.v  reserved_notation.v  smallstr.v  stdlib_stdpp_list.v  telescopes.v  uint63.v  word.v  wrap.v
(+1295 files in other folders)
