opam-version: "2.0"
name: "coq-cpp2v"
synopsis: "Frontend and program logic for C++"
maintainer: ["Gregory Malecha <gregory@bedrocksystems.com>"
             "Abhishek Anand <abhishek@bedrocksystems.com>"
             "Gordon Stewart <gordon@bedrocksystems.com>"]
authors: ["Gregory Malecha <gregory@bedrocksystems.com>"
          "Abhishek Anand <abhishek@bedrocksystems.com>"
          "Gordon Stewart <gordon@bedrocksystems.com>"]
homepage: "https://github.com/bedrocksystems/cpp2v"
bug-reports: "https://github.com/bedrocksystems/cpp2v/issues"
dev-repo: "git+https://github.com/bedrocksystems/cpp2v.git"

depends: [
  "coq" { >= "8.11.2" & < "8.13.0" }
  "coq-ext-lib" { >= "0.11.1" & < "0.12"}
  "coq-iris" { = "dev.2020-09-14.5.5d04e9aa" }
  "coq-iris-string-ident" { = "dev" }
]
version: "vdev"

build: [ make "-j%{jobs}%" "coq" ]
install: [ make "install-coq" ]
