; Explain Dune how to find and build cpp2v binary
(subdir build
 (rule
  (targets llvm-lib-path.txt)
  ; (deps (universe)) ; needed?
  (action
   (with-outputs-to llvm-lib-path.txt
    (run llvm-config --libfiles))))
 (rule
  (targets cpp2v cpp2v-make.log)
  (deps llvm-lib-path.txt %{read-lines:llvm-lib-path.txt} ../Makefile ../Makefile.doc ../CMakeLists.txt (source_tree ../src)
    (source_tree ../cmake) (source_tree ../include) (source_tree ../doc)
    (source_tree ../llvm-include)
    (env_var PATH) (env_var LLVM_DIR) (env_var CLANG_DIR))
  (action
   (with-outputs-to cpp2v-make.log
    (run make -j 7 -C .. cpp2v))))
 ; The install rule is also necessary to _use_ cpp2v in other actions
 (install
  (section bin)
  (files cpp2v)
  (package coq-cpp2v-bin)))
