(lang dune 3.6)
(using coq 0.6)
(name coq-lens)

(generate_opam_files)

(maintainers
 "Gregory Malecha <gregory@bedrocksystems.com>")
(authors
 "Gregory Malecha <gregory@bedrocksystems.com>")
(source (github bedrocksystems/cpp2v))

(package
 (name coq-lens)
 (synopsis "Generation of lenses for record datatypes")
 (depends
  (coq (and (>= 8.17.0) (< 8.18~)))
  ;; (coq (and (>= 8.16) (< 8.18~)))
  (elpi (= 1.16.9))
  (coq-elpi (= 1.17.1))))
